// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu with customized class names and built-in classes 1`] = `
<div
  className="metismenu test-c"
>
  <ul
    className="metismenu-container test-cc"
  >
    <li
      className="metismenu-item test-ci"
    >
      <a
        className="metismenu-link test-cl"
        href="#item-1"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="metismenu-icon test-cic test-ipbolt"
        />
        Item 1
      </a>
    </li>
    <li
      className="metismenu-item test-ci"
    >
      <a
        className="metismenu-link test-cl"
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="metismenu-icon test-cic test-ipbell"
        />
        Item 2
        <i
          className="metismenu-state-icon test-csi test-iptest-ish"
        />
      </a>
      <ul
        className="metismenu-container test-cc"
      >
        <li
          className="metismenu-item test-ci"
        >
          <a
            className="metismenu-link test-cl"
            href="#sub-item-1"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="metismenu-icon test-cic test-ipeye"
            />
            Sub Item 1
          </a>
        </li>
        <li
          className="metismenu-item test-ci"
        >
          <a
            className="metismenu-link test-cl"
            href="#sub-item-2"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="metismenu-icon test-cic test-ipglobe"
            />
            Sub Item 2
          </a>
        </li>
      </ul>
    </li>
    <li
      className="metismenu-item test-ci"
    >
      <a
        className="metismenu-link test-cl"
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="metismenu-icon test-cic test-ipbell"
        />
        Item 3
        <i
          className="metismenu-state-icon test-csi test-iptest-ish"
        />
      </a>
      <ul
        className="metismenu-container test-cc"
      >
        <li
          className="metismenu-item test-ci"
        >
          <a
            className="metismenu-link test-cl"
            href="#sub-item-3"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="metismenu-icon test-cic test-ipeye"
            />
            Sub Item 3
          </a>
        </li>
        <li
          className="metismenu-item test-ci"
        >
          <a
            className="metismenu-link test-cl"
            href="#"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="metismenu-icon test-cic test-ipglobe"
            />
            Sub Item 4
            <i
              className="metismenu-state-icon test-csi test-iptest-ish"
            />
          </a>
          <ul
            className="metismenu-container test-cc"
          >
            <li
              className="metismenu-item test-ci"
            >
              <a
                className="metismenu-link test-cl"
                href="#level-3-item-1"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="metismenu-icon test-cic test-ipbolt"
                />
                Level 3 Item 1
              </a>
            </li>
            <li
              className="metismenu-item test-ci"
            >
              <a
                className="metismenu-link test-cl"
                href="#level-3-item-2"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="metismenu-icon test-cic test-ipbell"
                />
                Level 3 Item 2
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      className="metismenu-item test-ci"
    >
      <a
        className="metismenu-link test-cl"
        href="http://www.google.com"
        onClick={[Function]}
        target="_blank"
      >
        <i
          className="metismenu-icon test-cic test-ipexternal-url"
        />
        External Url
      </a>
    </li>
  </ul>
</div>
`;

exports[`Menu with customized class names and no built-in classes 1`] = `
<div
  className="test-c"
>
  <ul
    className="test-cc"
  >
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="#item-1"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="test-cic test-ipbolt"
        />
        Item 1
      </a>
    </li>
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="test-cic test-ipbell"
        />
        Item 2
        <i
          className="test-csi test-iptest-ish"
        />
      </a>
      <ul
        className="test-cc"
      >
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#sub-item-1"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipeye"
            />
            Sub Item 1
          </a>
        </li>
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#sub-item-2"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipglobe"
            />
            Sub Item 2
          </a>
        </li>
      </ul>
    </li>
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="test-cic test-ipbell"
        />
        Item 3
        <i
          className="test-csi test-iptest-ish"
        />
      </a>
      <ul
        className="test-cc"
      >
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#sub-item-3"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipeye"
            />
            Sub Item 3
          </a>
        </li>
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipglobe"
            />
            Sub Item 4
            <i
              className="test-csi test-iptest-ish"
            />
          </a>
          <ul
            className="test-cc"
          >
            <li
              className="test-ci"
            >
              <a
                className="test-cl"
                href="#level-3-item-1"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="test-cic test-ipbolt"
                />
                Level 3 Item 1
              </a>
            </li>
            <li
              className="test-ci"
            >
              <a
                className="test-cl"
                href="#level-3-item-2"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="test-cic test-ipbell"
                />
                Level 3 Item 2
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="http://www.google.com"
        onClick={[Function]}
        target="_blank"
      >
        <i
          className="test-cic test-ipexternal-url"
        />
        External Url
      </a>
    </li>
  </ul>
</div>
`;

exports[`Menu with customized class names classNameContainer func support 1`] = `
<div
  className="test-c"
>
  <ul
    className="test-cc"
  >
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="#item-1"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="test-cic test-ipbolt"
        />
        Item 1
      </a>
    </li>
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="test-cic test-ipbell"
        />
        Item 2
        <i
          className="test-csi test-iptest-ish"
        />
      </a>
      <ul
        className="child-cc"
      >
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#sub-item-1"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipeye"
            />
            Sub Item 1
          </a>
        </li>
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#sub-item-2"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipglobe"
            />
            Sub Item 2
          </a>
        </li>
      </ul>
    </li>
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="test-cic test-ipbell"
        />
        Item 3
        <i
          className="test-csi test-iptest-ish"
        />
      </a>
      <ul
        className="child-cc"
      >
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#sub-item-3"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipeye"
            />
            Sub Item 3
          </a>
        </li>
        <li
          className="test-ci"
        >
          <a
            className="test-cl"
            href="#"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="test-cic test-ipglobe"
            />
            Sub Item 4
            <i
              className="test-csi test-iptest-ish"
            />
          </a>
          <ul
            className="child-cc"
          >
            <li
              className="test-ci"
            >
              <a
                className="test-cl"
                href="#level-3-item-1"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="test-cic test-ipbolt"
                />
                Level 3 Item 1
              </a>
            </li>
            <li
              className="test-ci"
            >
              <a
                className="test-cl"
                href="#level-3-item-2"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="test-cic test-ipbell"
                />
                Level 3 Item 2
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      className="test-ci"
    >
      <a
        className="test-cl"
        href="http://www.google.com"
        onClick={[Function]}
        target="_blank"
      >
        <i
          className="test-cic test-ipexternal-url"
        />
        External Url
      </a>
    </li>
  </ul>
</div>
`;

exports[`Menu with no built-in classes 1`] = `
<div
  className=""
>
  <ul
    className=""
  >
    <li
      className=""
    >
      <a
        className=""
        href="#item-1"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="fa fa-bolt"
        />
        Item 1
      </a>
    </li>
    <li
      className=""
    >
      <a
        className=""
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="fa fa-bell"
        />
        Item 2
        <i
          className="fa fa-caret-left"
        />
      </a>
      <ul
        className=""
      >
        <li
          className=""
        >
          <a
            className=""
            href="#sub-item-1"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="fa fa-eye"
            />
            Sub Item 1
          </a>
        </li>
        <li
          className=""
        >
          <a
            className=""
            href="#sub-item-2"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="fa fa-globe"
            />
            Sub Item 2
          </a>
        </li>
      </ul>
    </li>
    <li
      className=""
    >
      <a
        className=""
        href="#"
        onClick={[Function]}
        target={undefined}
      >
        <i
          className="fa fa-bell"
        />
        Item 3
        <i
          className="fa fa-caret-left"
        />
      </a>
      <ul
        className=""
      >
        <li
          className=""
        >
          <a
            className=""
            href="#sub-item-3"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="fa fa-eye"
            />
            Sub Item 3
          </a>
        </li>
        <li
          className=""
        >
          <a
            className=""
            href="#"
            onClick={[Function]}
            target={undefined}
          >
            <i
              className="fa fa-globe"
            />
            Sub Item 4
            <i
              className="fa fa-caret-left"
            />
          </a>
          <ul
            className=""
          >
            <li
              className=""
            >
              <a
                className=""
                href="#level-3-item-1"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="fa fa-bolt"
                />
                Level 3 Item 1
              </a>
            </li>
            <li
              className=""
            >
              <a
                className=""
                href="#level-3-item-2"
                onClick={[Function]}
                target={undefined}
              >
                <i
                  className="fa fa-bell"
                />
                Level 3 Item 2
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      className=""
    >
      <a
        className=""
        href="http://www.google.com"
        onClick={[Function]}
        target="_blank"
      >
        <i
          className="fa fa-external-url"
        />
        External Url
      </a>
    </li>
  </ul>
</div>
`;
